> fix page.js issue
Current index wasn't being set on page change. Also adds css reset.

--- a/src/style/styles.sass
+++ b/src/style/styles.sass
@@ -1,5 +1,19 @@
+@import '_reset';
 @import '_variables';
 
+html, body
+  height: 100%
+  width: 100%
+
+.topHeader
+  height: 10%
+
+.pages 
+  height: 90%
+  width: 100%
+
 .page
+  background-color: $blue
   display: none
-  color: $blue
+  min-height: 100%
+  width: 100%
