--- a/src/style/styles.sass
+++ b/src/style/styles.sass
@@ -6,14 +6,18 @@ html, body
   width: 100%
 
 .topHeader
-  height: 10%
-
-.pages 
-  height: 90%
+  background-color: white
+  height: 5vh
+  position: absolute
+  top: 0
   width: 100%
+  z-index: 1
 
 .page
-  background-color: $blue
-  display: none
-  min-height: 100%
-  width: 100%
+  padding-top: 5vh
+
+section:nth-child(odd)
+  background-color: rebeccapurple
+
+section:nth-child(even)
+  background-color: blue
