> :globe_with_meridians: misc map changes

--- a/src/style/styles.sass
+++ b/src/style/styles.sass
@@ -17,7 +17,7 @@ html, body
   padding-top: 5vh
 
 section:nth-child(odd)
-  background-color: rebeccapurple
+  background-color: #27A5C7
 
 section:nth-child(even)
-  background-color: blue
+  background-color: #0033BA
